
=== ppracer 0.5 alpha2 ===

2005-10-18  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/sg/geoms.*
	improoved Polyhedron and Polygon class
	
	* src/hier_utils.cpp src/phys_sim.cpp src/elements.cpp
	fixed memleaks
	
	* src/ppogl/models/model_ac.*
	fixed memleak
	use PP_WARNING instead of printf
	
	* src/render_utils.* src/gl_utils.* src/loop.*
	  src/nmrcl.* src/quadtree.* src/view.*
	removed unused functions

2005-10-17  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/images/readPNG.cpp
	fixed memleak
	
	* src/ppogl/base/singleton.h
	use std::auto_ptr
	
	* src/ppogl/font.cpp src/ftgl/FTFont.*
	added reference counter to FTFont

2005-10-16  Volker Stroebel <volker@planetpenguin.de>
	* src/racing.cpp
	fixed braking in multiplayer mode
	fixed updating time in multiplayer mode

	* data/models/tux2/model.nut
	changed material names
	
	* src/gameover.cpp
	removed unneeded drawing of hud
	
	* src/view.cpp src/racingmode.cpp
	fixed paused and gameover views in multiplayer mode

2005-10-13  Volker Stroebel <volker@planetpenguin.de>
	* src/lights.cpp
	fixed registration of light colors

	* data/themes/conditions/common/*.nut
	fixed lighting

2005-10-12  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/glextensions.cpp
	fixed compilation on g++-2.95

2005-10-10  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/base/os.* src/main.cpp src/stuff.cpp
	implemented handling of home and user directory in ppogl
	
	* src/course_load.cpp data/init.nut
	added support courses in the users home dir
	
	* src/ppogl/base/glextensions.*
	added glextension system
	
	* src/ppogl/ui/scale.*
	added changed signal
	
	* src/audioconfig.* src/ppogl/audio/audiomgr.cpp
	added realtime change of music volume in audio configuration

2005-10-09  Volker Stroebel <volker@planetpenguin.de>
	* (*)
	added background image for fps counter
	improved hud to support backgrounds for fps and course percentage
	fixed bug in percentagebar

	* src/squirrel/* src/sqstdlib/*